-Upgraded dependencies to the latest versions. -Migrated from Commons Loggin to SLF4J. -Addded enforcer-plugin to check for dependencies affected by know CVE's.